--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>বুয়েটে আড়িপেতে শোনা by bahar</title>
+    <title></title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>বুয়েটে আড়িপেতে শোনা</h1>
+        <h1>বুয়েটে আড়িপেতে শোনা</h1>
         <h2>Easy facebook group feed explorer for OverheardAtBUET</h2>
-        <a href="https://github.com/bahar/buet" class="button"><small>View project on</small>GitHub</a>
+        <!-- <a href="https://github.com/bahar/buet" class="button"><small>View project on</small>GitHub</a> -->
       </div>
     </header>
 
@@ -73,7 +73,7 @@
           </li>
           </script>
         </section>
-
+<!--
         <aside id="sidebar">
           <a href="https://github.com/bahar/buet/zipball/master" class="button">
             <small>Download</small>
@@ -86,6 +86,7 @@
 
           <p class="repo-owner"><a href="https://github.com/bahar/buet"></a> is maintained by <a href="https://github.com/bahar">bahar</a>.</p>
         </aside>
+        -->
       </div>
     </div>
 
